--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "forkify",
   "version": "1.0.0",
   "description": "recipe web application",
-
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html"
@@ -18,6 +17,11 @@
   },
   "homepage": "https://github.com/Omared250/forkify-final-project#readme",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.5.0",
     "parcel": "^2.5.0"
+  },
+  "dependencies": {
+    "core-js": "^3.22.5",
+    "regenerator-runtime": "^0.13.9"
   }
 }
