--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "forkify",
   "version": "1.0.0",
   "description": "recipe web application",
-  "default" : "index.html",
+  "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html --dist-dir ./dist"
@@ -24,6 +24,7 @@
   "dependencies": {
     "core-js": "^3.22.5",
     "fractional": "^1.0.0",
+    "fracty": "^1.0.11",
     "regenerator-runtime": "^0.13.9"
   }
 }
